fix derived feature handling + impove dreal calling